@@ -84,8 +84,11 @@ extern "C" {
 #endif
 
 #define DTLS1_VERSION			0xFEFF
-#define DTLS1_BAD_VER			0x0100
 #define DTLS1_2_VERSION			0xFEFD
+#define DTLS_MAX_VERSION		DTLS1_2_VERSION
+
+#define DTLS1_BAD_VER			0x0100
+
 /* Special value for method supporting multiple versions */
 #define DTLS_ANY_VERSION		0x1FFFF
 
@@ -287,4 +290,3 @@ typedef struct dtls1_record_data_st
 }
 #endif
 #endif
-
