@@ -421,6 +421,9 @@ int ssl23_get_client_hello(SSL *s)
 			}
 		}
 
+	/* ensure that TLS_MAX_VERSION is up-to-date */
+	OPENSSL_assert(s->version <= TLS_MAX_VERSION);
+
 	if (s->version < TLS1_2_VERSION && tls1_suiteb(s))
 		{
 		SSLerr(SSL_F_SSL23_GET_CLIENT_HELLO,
